[gd_scene load_steps=34 format=2]

[ext_resource path="res://game/background.tres" type="Texture" id=1]
[ext_resource path="res://game/event_driver.gd" type="Script" id=2]
[ext_resource path="res://game/scripts/event_driver/rings_multimesh.gd" type="Script" id=3]
[ext_resource path="res://game/Wall/wall_new.material" type="Material" id=4]
[ext_resource path="res://game/data/background/bg_base.png" type="Texture" id=5]
[ext_resource path="res://game/data/background/bg_2.png" type="Texture" id=6]
[ext_resource path="res://game/data/background/bg_0.png" type="Texture" id=7]
[ext_resource path="res://game/data/background/bg_4.png" type="Texture" id=8]
[ext_resource path="res://game/data/background/bg_3.png" type="Texture" id=9]
[ext_resource path="res://game/data/background/bg_1.png" type="Texture" id=10]
[ext_resource path="res://game/data/background/ring.mesh" type="ArrayMesh" id=11]

[sub_resource type="SpatialMaterial" id=1]
flags_unshaded = true
albedo_color = Color( 0.992157, 0, 1, 1 )

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
albedo_color = Color( 0.262745, 0.388235, 0.964706, 1 )

[sub_resource type="CubeMesh" id=3]
material = SubResource( 2 )
size = Vector3( 0.5, 2, 0.5 )

[sub_resource type="Shader" id=4]
code = "shader_type spatial;
render_mode unshaded;

uniform sampler2D bg_base;
uniform sampler2D bg_0;
uniform sampler2D bg_1;
uniform sampler2D bg_2;
uniform sampler2D bg_3;
uniform sampler2D bg_4;
uniform lowp float bg_0_intensity = 0f;
uniform lowp float bg_1_intensity = 0f;
uniform lowp float bg_2_intensity = 0f;
uniform lowp float bg_3_intensity = 0f;
uniform lowp float bg_4_intensity = 0f;
uniform lowp vec4 bg_0_tint;
uniform lowp vec4 bg_1_tint;
uniform lowp vec4 bg_2_tint;
uniform lowp vec4 bg_3_tint;
uniform lowp vec4 bg_4_tint;
uniform lowp float bg_0_intensity_mult = 1f;
uniform lowp float bg_1_intensity_mult = 1f;
uniform lowp float bg_2_intensity_mult = 1f;
uniform lowp float bg_3_intensity_mult = 1f;
uniform lowp float bg_4_intensity_mult = 1f;

void fragment(){
	ALBEDO = texture(bg_base,UV).rgb;
	vec2 xinv_uv = vec2(-UV.x,UV.y);
	if (bg_0_intensity>0f){ALBEDO += (texture(bg_0,xinv_uv).rgb*(bg_0_intensity*bg_0_intensity_mult))*bg_0_tint.rgb;}
	if (bg_1_intensity>0f){ALBEDO += (texture(bg_1,xinv_uv).rgb*(bg_1_intensity*bg_1_intensity_mult))*bg_1_tint.rgb;}
	if (bg_2_intensity>0f){ALBEDO += (texture(bg_2,xinv_uv).rgb*(bg_2_intensity*bg_2_intensity_mult))*bg_2_tint.rgb;}
	if (bg_3_intensity>0f){ALBEDO += (texture(bg_3,xinv_uv).rgb*(bg_3_intensity*bg_3_intensity_mult))*bg_3_tint.rgb;}
	if (bg_4_intensity>0f){ALBEDO += (texture(bg_4,xinv_uv).rgb*(bg_4_intensity*bg_4_intensity_mult))*bg_4_tint.rgb;}
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/bg_0_intensity = 0.0
shader_param/bg_1_intensity = 0.0
shader_param/bg_2_intensity = 0.0
shader_param/bg_3_intensity = 0.0
shader_param/bg_4_intensity = 0.0
shader_param/bg_0_tint = Plane( 1, 0.1, 0.1, 0 )
shader_param/bg_1_tint = Plane( 1, 0.1, 0.1, 0 )
shader_param/bg_2_tint = Plane( 1, 0.1, 0.1, 0 )
shader_param/bg_3_tint = Plane( 1, 0.1, 0.1, 0 )
shader_param/bg_4_tint = Plane( 1, 0.1, 0.1, 0 )
shader_param/bg_0_intensity_mult = 0.25
shader_param/bg_1_intensity_mult = 0.15
shader_param/bg_2_intensity_mult = 0.25
shader_param/bg_3_intensity_mult = 0.25
shader_param/bg_4_intensity_mult = 0.4
shader_param/bg_base = ExtResource( 5 )
shader_param/bg_0 = ExtResource( 7 )
shader_param/bg_1 = ExtResource( 10 )
shader_param/bg_2 = ExtResource( 6 )
shader_param/bg_3 = ExtResource( 9 )
shader_param/bg_4 = ExtResource( 8 )

[sub_resource type="SphereMesh" id=6]
flip_faces = true
radius = 512.0
height = 256.0

[sub_resource type="SpatialMaterial" id=7]
flags_unshaded = true
albedo_color = Color( 0, 0.0627451, 0.172549, 1 )
albedo_texture = ExtResource( 1 )

[sub_resource type="SpatialMaterial" id=8]
flags_unshaded = true
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=9]
flags_unshaded = true

[sub_resource type="CubeMesh" id=10]
material = SubResource( 9 )
size = Vector3( 0.1, 0.1, 32 )

[sub_resource type="SpatialMaterial" id=11]
flags_unshaded = true
albedo_color = Color( 0.945098, 1, 0, 1 )

[sub_resource type="SpatialMaterial" id=12]
flags_unshaded = true
albedo_color = Color( 0.00784314, 1, 0, 1 )

[sub_resource type="Animation" id=13]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("laser4:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 60, -90, -90 ), Vector3( 120, -90, -90 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("laser3:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 60, -90, -90 ), Vector3( 120, -90, -90 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("laser2:rotation_degrees")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 60, -90, -90 ), Vector3( 120, -90, -90 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("laser1:rotation_degrees")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 60, -90, -90 ), Vector3( 120, -90, -90 ) ]
}

[sub_resource type="SpatialMaterial" id=14]
flags_unshaded = true
albedo_color = Color( 0, 0.0627451, 1, 1 )

[sub_resource type="Animation" id=15]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("laser4:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 60, -90, -90 ), Vector3( 120, -90, -90 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("laser3:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 60, -90, -90 ), Vector3( 120, -90, -90 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("laser2:rotation_degrees")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 60, -90, -90 ), Vector3( 120, -90, -90 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("laser1:rotation_degrees")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 60, -90, -90 ), Vector3( 120, -90, -90 ) ]
}

[sub_resource type="Gradient" id=16]
offsets = PoolRealArray( 0, 0.660256, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.1875, 0.1875, 0.1875, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=17]
gradient = SubResource( 16 )
width = 64

[sub_resource type="SpatialMaterial" id=18]
flags_unshaded = true
flags_disable_ambient_light = true
albedo_color = Color( 0.992157, 0, 1, 1 )
albedo_texture = SubResource( 17 )

[sub_resource type="PlaneMesh" id=19]

[sub_resource type="Shader" id=20]
code = "shader_type spatial;
render_mode unshaded;

uniform vec4 albedo_color : hint_color;
void fragment(){
	float fresnel = pow(dot(NORMAL,VIEW),5.0);
	fresnel = smoothstep(0.0,1.0,abs(fresnel-0.5));
	ALBEDO = max(albedo_color.rgb,vec3(0.3,0.3,0.3))*fresnel;
}"

[sub_resource type="ShaderMaterial" id=21]
shader = SubResource( 20 )
shader_param/albedo_color = null

[sub_resource type="MultiMesh" id=22]
transform_format = 1
instance_count = 8
mesh = ExtResource( 11 )
transform_array = PoolVector3Array( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, -5, 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, -10, 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, -15, 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, -20, 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, -25, 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, -30, 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, -35 )

[node name="event_driver" type="Spatial"]
script = ExtResource( 2 )

[node name="Level" type="Spatial" parent="."]

[node name="SpectrumBar" type="Spatial" parent="Level"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.5, 1, -61 )

[node name="Cube" type="MeshInstance" parent="Level/SpectrumBar"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )
material_override = SubResource( 1 )
mesh = SubResource( 3 )
material/0 = null

[node name="Sphere" type="MeshInstance" parent="Level"]
material_override = SubResource( 5 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="t0" type="Spatial" parent="Level"]

[node name="laser1" type="Spatial" parent="Level/t0"]
transform = Transform( 0.965926, -5.55139e-09, -0.776457, -0.258819, -4.21669e-08, -2.89778, -5.55139e-09, 1, -1.26501e-07, 4.57081, -2.26002, -30 )

[node name="Bar7" type="MeshInstance" parent="Level/t0/laser1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -16 )
material_override = SubResource( 8 )
mesh = SubResource( 10 )
material/0 = null

[node name="laser2" type="Spatial" parent="Level/t0"]
transform = Transform( 0.965926, -5.55139e-09, -0.776457, -0.258819, -4.21669e-08, -2.89778, -5.55139e-09, 1, -1.26501e-07, 4.57081, -2.26002, -35 )

[node name="Bar7" type="MeshInstance" parent="Level/t0/laser2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -16 )
material_override = SubResource( 8 )
mesh = SubResource( 10 )
material/0 = null

[node name="laser3" type="Spatial" parent="Level/t0"]
transform = Transform( 0.965926, -5.55139e-09, -0.776457, -0.258819, -4.21669e-08, -2.89778, -5.55139e-09, 1, -1.26501e-07, 4.57081, -2.26002, -40 )

[node name="Bar7" type="MeshInstance" parent="Level/t0/laser3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -16 )
material_override = SubResource( 8 )
mesh = SubResource( 10 )
material/0 = null

[node name="laser4" type="Spatial" parent="Level/t0"]
transform = Transform( 0.965926, -5.55139e-09, -0.776457, -0.258819, -4.21669e-08, -2.89778, -5.55139e-09, 1, -1.26501e-07, 4.57081, -2.26002, -45 )

[node name="Bar7" type="MeshInstance" parent="Level/t0/laser4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -16 )
material_override = SubResource( 8 )
mesh = SubResource( 10 )
material/0 = null

[node name="laser5" type="Spatial" parent="Level/t0"]
transform = Transform( 0.965926, -5.55139e-09, -0.776457, -0.258819, -4.21669e-08, -2.89778, -5.55139e-09, 1, -1.26501e-07, 4.57081, -2.26002, -50 )

[node name="Bar7" type="MeshInstance" parent="Level/t0/laser5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -16 )
material_override = SubResource( 8 )
mesh = SubResource( 10 )
material/0 = null

[node name="laser6" type="Spatial" parent="Level/t0"]
transform = Transform( 0.965926, 5.55139e-09, 0.776457, 0.258819, -4.21669e-08, -2.89778, 5.55139e-09, 1, -1.26501e-07, -4.42919, -2.26002, -30 )

[node name="Bar7" type="MeshInstance" parent="Level/t0/laser6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -16 )
material_override = SubResource( 8 )
mesh = SubResource( 10 )
material/0 = null

[node name="laser7" type="Spatial" parent="Level/t0"]
transform = Transform( 0.965926, 5.55139e-09, 0.776457, 0.258819, -4.21669e-08, -2.89778, 5.55139e-09, 1, -1.26501e-07, -4.42919, -2.26002, -35 )

[node name="Bar7" type="MeshInstance" parent="Level/t0/laser7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -16 )
material_override = SubResource( 8 )
mesh = SubResource( 10 )
material/0 = null

[node name="laser8" type="Spatial" parent="Level/t0"]
transform = Transform( 0.965926, 5.55139e-09, 0.776457, 0.258819, -4.21669e-08, -2.89778, 5.55139e-09, 1, -1.26501e-07, -4.42919, -2.26002, -40 )

[node name="Bar7" type="MeshInstance" parent="Level/t0/laser8"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -16 )
material_override = SubResource( 8 )
mesh = SubResource( 10 )
material/0 = null

[node name="laser9" type="Spatial" parent="Level/t0"]
transform = Transform( 0.965926, 5.55139e-09, 0.776457, 0.258819, -4.21669e-08, -2.89778, 5.55139e-09, 1, -1.26501e-07, -4.42919, -2.26002, -45 )

[node name="Bar7" type="MeshInstance" parent="Level/t0/laser9"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -16 )
material_override = SubResource( 8 )
mesh = SubResource( 10 )
material/0 = null

[node name="laser10" type="Spatial" parent="Level/t0"]
transform = Transform( 0.965926, 5.55139e-09, 0.776457, 0.258819, -4.21669e-08, -2.89778, 5.55139e-09, 1, -1.26501e-07, -4.42919, -2.26002, -50 )

[node name="Bar7" type="MeshInstance" parent="Level/t0/laser10"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -16 )
material_override = SubResource( 8 )
mesh = SubResource( 10 )
material/0 = null

[node name="Tween" type="Tween" parent="Level/t0"]

[node name="t1" type="Spatial" parent="Level"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -15 )

[node name="Bar7" type="MeshInstance" parent="Level/t1"]
transform = Transform( -1.31134e-08, 0, -0.3, 0, 1, 0, 1, 0, -4.37114e-08, 0, 11, 5 )
material_override = SubResource( 11 )
mesh = SubResource( 10 )
material/0 = null

[node name="Bar8" type="MeshInstance" parent="Level/t1"]
transform = Transform( -1.31134e-08, 0, -0.3, 0, 1, 0, 1, 0, -4.37114e-08, 0, 11, -5 )
material_override = SubResource( 11 )
mesh = SubResource( 10 )
material/0 = null

[node name="Bar9" type="MeshInstance" parent="Level/t1"]
transform = Transform( -1.31134e-08, 0, -0.3, 0, 1, 0, 1, 0, -4.37114e-08, 0, 11, -15 )
material_override = SubResource( 11 )
mesh = SubResource( 10 )
material/0 = null

[node name="Bar10" type="MeshInstance" parent="Level/t1"]
transform = Transform( -1.31134e-08, 0, -0.3, 0, 1, 0, 1, 0, -4.37114e-08, 0, 11, -25 )
material_override = SubResource( 11 )
mesh = SubResource( 10 )
material/0 = null

[node name="Bar11" type="MeshInstance" parent="Level/t1"]
transform = Transform( -1.31134e-08, 0, -0.3, 0, 1, 0, 1, 0, -4.37114e-08, 0, 11, -35 )
material_override = SubResource( 11 )
mesh = SubResource( 10 )
material/0 = null

[node name="Bar12" type="MeshInstance" parent="Level/t1"]
transform = Transform( -1.31134e-08, 0, -0.3, 0, 1, 0, 1, 0, -4.37114e-08, 0, 11, -45 )
material_override = SubResource( 11 )
mesh = SubResource( 10 )
material/0 = null

[node name="5" type="Spatial" parent="Level/t1"]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, 0, 0, 0 )

[node name="Bar7" type="MeshInstance" parent="Level/t1/5"]
transform = Transform( -1.31134e-08, 0, -0.3, 0, 1, 0, 1, 0, -4.37114e-08, 0, 11, 5 )
material_override = SubResource( 11 )
mesh = SubResource( 10 )
material/0 = null

[node name="Bar8" type="MeshInstance" parent="Level/t1/5"]
transform = Transform( -1.31134e-08, 0, -0.3, 0, 1, 0, 1, 0, -4.37114e-08, 0, 11, -5 )
material_override = SubResource( 11 )
mesh = SubResource( 10 )
material/0 = null

[node name="Bar9" type="MeshInstance" parent="Level/t1/5"]
transform = Transform( -1.31134e-08, 0, -0.3, 0, 1, 0, 1, 0, -4.37114e-08, 0, 11, -15 )
material_override = SubResource( 11 )
mesh = SubResource( 10 )
material/0 = null

[node name="Bar10" type="MeshInstance" parent="Level/t1/5"]
transform = Transform( -1.31134e-08, 0, -0.3, 0, 1, 0, 1, 0, -4.37114e-08, 0, 11, -25 )
material_override = SubResource( 11 )
mesh = SubResource( 10 )
material/0 = null

[node name="Bar11" type="MeshInstance" parent="Level/t1/5"]
transform = Transform( -1.31134e-08, 0, -0.3, 0, 1, 0, 1, 0, -4.37114e-08, 0, 11, -35 )
material_override = SubResource( 11 )
mesh = SubResource( 10 )
material/0 = null

[node name="Bar12" type="MeshInstance" parent="Level/t1/5"]
transform = Transform( -1.31134e-08, 0, -0.3, 0, 1, 0, 1, 0, -4.37114e-08, 0, 11, -45 )
material_override = SubResource( 11 )
mesh = SubResource( 10 )
material/0 = null

[node name="6" type="Spatial" parent="Level/t1"]
transform = Transform( -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0, 1, 0, 0, 0 )

[node name="Bar7" type="MeshInstance" parent="Level/t1/6"]
transform = Transform( -1.31134e-08, 0, -0.3, 0, 1, 0, 1, 0, -4.37114e-08, 0, 11, 5 )
material_override = SubResource( 11 )
mesh = SubResource( 10 )
material/0 = null

[node name="Bar8" type="MeshInstance" parent="Level/t1/6"]
transform = Transform( -1.31134e-08, 0, -0.3, 0, 1, 0, 1, 0, -4.37114e-08, 0, 11, -5 )
material_override = SubResource( 11 )
mesh = SubResource( 10 )
material/0 = null

[node name="Bar9" type="MeshInstance" parent="Level/t1/6"]
transform = Transform( -1.31134e-08, 0, -0.3, 0, 1, 0, 1, 0, -4.37114e-08, 0, 11, -15 )
material_override = SubResource( 11 )
mesh = SubResource( 10 )
material/0 = null

[node name="Bar10" type="MeshInstance" parent="Level/t1/6"]
transform = Transform( -1.31134e-08, 0, -0.3, 0, 1, 0, 1, 0, -4.37114e-08, 0, 11, -25 )
material_override = SubResource( 11 )
mesh = SubResource( 10 )
material/0 = null

[node name="Bar11" type="MeshInstance" parent="Level/t1/6"]
transform = Transform( -1.31134e-08, 0, -0.3, 0, 1, 0, 1, 0, -4.37114e-08, 0, 11, -35 )
material_override = SubResource( 11 )
mesh = SubResource( 10 )
material/0 = null

[node name="Bar12" type="MeshInstance" parent="Level/t1/6"]
transform = Transform( -1.31134e-08, 0, -0.3, 0, 1, 0, 1, 0, -4.37114e-08, 0, 11, -45 )
material_override = SubResource( 11 )
mesh = SubResource( 10 )
material/0 = null

[node name="Tween" type="Tween" parent="Level/t1"]

[node name="t2" type="Spatial" parent="Level"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10 )

[node name="laser1" type="Spatial" parent="Level/t2"]
transform = Transform( 0.988014, -5.23933e-10, -0.154366, -0.154366, -6.74753e-09, -0.988014, -5.23933e-10, 1, -6.74753e-09, -12.4292, -1.26002, -11 )

[node name="Bar7" type="MeshInstance" parent="Level/t2/laser1"]
transform = Transform( 1, 0, -7.02255e-16, 0, 1, 0, 2.34085e-16, 0, 3, 0, 9.53674e-07, -9 )
material_override = SubResource( 12 )
mesh = SubResource( 10 )
material/0 = null

[node name="laser2" type="Spatial" parent="Level/t2"]
transform = Transform( 0.915241, -3.70493e-09, 0.402906, 0.402906, 1.76116e-08, -0.915241, -3.70492e-09, 1, 1.76116e-08, -12.4292, -1.26002, -14 )

[node name="Bar7" type="MeshInstance" parent="Level/t2/laser2"]
transform = Transform( 1, 0, -7.02255e-16, 0, 1, 0, 2.34085e-16, 0, 3, 0, 9.53674e-07, -9 )
material_override = SubResource( 12 )
mesh = SubResource( 10 )
material/0 = null

[node name="laser3" type="Spatial" parent="Level/t2"]
transform = Transform( 0.880312, -5.23174e-09, -0.474396, -0.474396, -2.07365e-08, -0.880312, -5.23174e-09, 1, -2.07365e-08, -12.4292, -1.26002, -17 )

[node name="Bar7" type="MeshInstance" parent="Level/t2/laser3"]
transform = Transform( 1, 0, -7.02255e-16, 0, 1, 0, 2.34085e-16, 0, 3, 0, 0, -9 )
material_override = SubResource( 12 )
mesh = SubResource( 10 )
material/0 = null

[node name="laser4" type="Spatial" parent="Level/t2"]
transform = Transform( 0.866025, -5.85622e-09, -0.5, -0.5, -2.18557e-08, -0.866025, -5.85621e-09, 1, -2.18557e-08, -12.4292, -1.26002, -20 )

[node name="Bar7" type="MeshInstance" parent="Level/t2/laser4"]
transform = Transform( 1, 0, -7.02255e-16, 0, 1, 0, 2.34085e-16, 0, 3, 0, 0, -9 )
material_override = SubResource( 12 )
mesh = SubResource( 10 )
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="Level/t2"]
autoplay = "laser_anim"
playback_speed = 0.5
anims/laser_anim = SubResource( 13 )

[node name="Tween" type="Tween" parent="Level/t2"]

[node name="t3" type="Spatial" parent="Level"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, -41 )

[node name="laser1" type="Spatial" parent="Level/t3"]
transform = Transform( 0.988014, -5.23933e-10, -0.154366, -0.154366, -6.74753e-09, -0.988014, -5.23933e-10, 1, -6.74753e-09, -12.4292, -1.26002, -11 )

[node name="Bar7" type="MeshInstance" parent="Level/t3/laser1"]
transform = Transform( 1, 0, -7.02255e-16, 0, 1, 0, 2.34085e-16, 0, 3, 0, 9.53674e-07, -9 )
material_override = SubResource( 14 )
mesh = SubResource( 10 )
material/0 = null

[node name="laser2" type="Spatial" parent="Level/t3"]
transform = Transform( 0.915241, -3.70493e-09, 0.402906, 0.402906, 1.76116e-08, -0.915241, -3.70492e-09, 1, 1.76116e-08, -12.4292, -1.26002, -14 )

[node name="Bar7" type="MeshInstance" parent="Level/t3/laser2"]
transform = Transform( 1, 0, -7.02255e-16, 0, 1, 0, 2.34085e-16, 0, 3, 0, 9.53674e-07, -9 )
material_override = SubResource( 14 )
mesh = SubResource( 10 )
material/0 = null

[node name="laser3" type="Spatial" parent="Level/t3"]
transform = Transform( 0.880312, -5.23174e-09, -0.474395, -0.474395, -2.07365e-08, -0.880312, -5.23174e-09, 1, -2.07365e-08, -12.4292, -1.26002, -17 )

[node name="Bar7" type="MeshInstance" parent="Level/t3/laser3"]
transform = Transform( 1, 0, -7.02255e-16, 0, 1, 0, 2.34085e-16, 0, 3, 0, 0, -9 )
material_override = SubResource( 14 )
mesh = SubResource( 10 )
material/0 = null

[node name="laser4" type="Spatial" parent="Level/t3"]
transform = Transform( 0.866025, -5.85622e-09, -0.5, -0.5, -2.18557e-08, -0.866025, -5.85621e-09, 1, -2.18557e-08, -12.4292, -1.26002, -20 )

[node name="Bar7" type="MeshInstance" parent="Level/t3/laser4"]
transform = Transform( 1, 0, -7.02255e-16, 0, 1, 0, 2.34085e-16, 0, 3, 0, 0, -9 )
material_override = SubResource( 14 )
mesh = SubResource( 10 )
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="Level/t3"]
autoplay = "laser_anim"
playback_speed = 0.5
anims/laser_anim = SubResource( 15 )

[node name="Tween" type="Tween" parent="Level/t3"]

[node name="floor" type="MeshInstance" parent="Level"]
transform = Transform( -3.9101e-06, 0, 3, 0, 1, 0, -24, 0, -4.88762e-07, 0, 0, -24 )
material_override = SubResource( 18 )
mesh = SubResource( 19 )
material/0 = null

[node name="t4" type="Spatial" parent="Level"]

[node name="Bar1" type="MeshInstance" parent="Level/t4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 2, 3, 0, -23 )
material_override = SubResource( 1 )
mesh = SubResource( 10 )
material/0 = null

[node name="Bar2" type="MeshInstance" parent="Level/t4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 2, -3, 0, -23 )
material_override = SubResource( 1 )
mesh = SubResource( 10 )
material/0 = null

[node name="Tween" type="Tween" parent="Level/t4"]

[node name="rings" type="MultiMeshInstance" parent="Level"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, -10 )
material_override = SubResource( 21 )
multimesh = SubResource( 22 )
script = ExtResource( 3 )

[node name="wall_material_holder" type="MeshInstance" parent="."]
material_override = ExtResource( 4 )

[connection signal="tween_step" from="Level/t0/Tween" to="." method="_on_Tween_tween_step" binds= [ 0 ]]
[connection signal="tween_step" from="Level/t1/Tween" to="." method="_on_Tween_tween_step" binds= [ 1 ]]
[connection signal="tween_step" from="Level/t2/Tween" to="." method="_on_Tween_tween_step" binds= [ 2 ]]
[connection signal="tween_step" from="Level/t3/Tween" to="." method="_on_Tween_tween_step" binds= [ 3 ]]
[connection signal="tween_step" from="Level/t4/Tween" to="." method="_on_Tween_tween_step" binds= [ 4 ]]
